# nextjs-fastapi-template

./: .gitignore  README.md  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml
api/: index.py  utils.py
scripts/: syncApi.mjs
src/app/: page.tsx
src/server/api/: api.ts  generated.ts
